<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/preference_category_general">

        <DropDownPreference
            android:defaultValue="-1"
            android:entries="@array/theme_texts"
            android:entryValues="@array/theme_values"
            android:icon="@drawable/ic_dark_mode"
            android:key="dark_theme"
            android:summary="%s"
            android:title="@string/dark_theme" />

        <DropDownPreference
            android:title="Map"
            android:summary="%s"
            android:icon="@drawable/ic_map_type"
            android:key="map_type"
            android:dialogTitle="Map type"
            android:entries="@array/map_type"
            android:entryValues="@array/map_value"
            android:defaultValue="1" />

        <Preference
            android:title="@string/enable_joystick"
            android:summary="@string/enable_joystick_summary"
            android:icon="@drawable/ic_joystick"
            android:key="joystick_enabled"
            android:defaultValue="false" />

        <SwitchPreferenceCompat
            android:title="@string/check_update"
            android:summary="@string/check_update_summary"
            android:icon="@drawable/ic_update"
            android:widgetLayout="@layout/preference_switch_widget"
            android:key="disable_update"
            android:defaultValue="false" />

        <!-- Anti-Detection Menu -->
        <Preference
            android:title="Anti-Detection"
            android:summary="Advanced spoofing &amp; bypass settings"
            android:icon="@drawable/ic_advanced_hook"
            android:key="anti_detection_menu">
            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="io.github.mwarevn.fakegps"
                android:targetClass="io.github.mwarevn.fakegps.ui.AntiDetectionSettingsActivity" />
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/xposed">

        <SwitchPreferenceCompat
            android:title="@string/advanced_hook"
            android:summary="@string/advanced_summary"
            android:key="system_hooked"
            android:icon="@drawable/ic_advanced_hook"
            android:widgetLayout="@layout/preference_switch_widget"
        />

        <EditTextPreference
            android:defaultValue="10"
            android:digits="0123456789"
            android:key="accuracy_level"
            android:title="@string/settings_of_accuracy"
            android:icon="@drawable/ic_accuracy"
            android:summary="10 m" />

        <SwitchPreferenceCompat
            android:title="@string/random_position"
            android:summary="@string/random_position_summary"
            android:icon="@drawable/ic_random_position"
            android:key="random_position"
            android:widgetLayout="@layout/preference_switch_widget"
        />

    </PreferenceCategory>

</PreferenceScreen>