<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/show_fake_icon"
        android:title="Hiện icon giả lập"
        app:showAsAction="never"
        android:checkable="true"
        app:actionViewClass="androidx.appcompat.widget.SwitchCompat"
        android:icon="@drawable/ic_fake_location"/>

    <item
        android:id="@+id/routing_settings"
        android:title="Cài đặt tìm đường"
        app:showAsAction="never"
        android:icon="@drawable/ic_baseline_directions_24"/>

    <item
        android:id="@+id/get_favorite"
        android:title="@string/favorites"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_favorite_list"/>

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_settings_24"/>

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="always"
        android:icon="@drawable/ic_outline_info_24"/>



</menu>